style Fix network selector on small screens

--- a/style/components.scss
+++ b/style/components.scss
@@ -52,6 +52,7 @@
     margin-left: 1%;
     margin-right: 1%;
     max-width: 7.25em;
+    padding: 0;
   }
 }
 
